Refactoring for better practices
