# src/main/java/com/example/warehouse_service/dto/WarehouseDto.java
@@ -14,9 +14,9 @@ import java.time.LocalDateTime;
 public class WarehouseDto {
     private int id;
 
-    private String warehouse_name;
+    private String warehouseName;
 
-    private String warehouse_identifier;
+    private String warehouseIdentifier;
 
     private LocalDateTime created;
 
