# src/main/resources/static/openapi.yaml
@@ -14,6 +14,30 @@ paths:
       summary: Get all warehouses
       tags:
         - Warehouses
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 0
+            minimum: 0
+          description: Page number (0-based)
+        - in: query
+          name: size
+          schema:
+            type: integer
+            default: 10
+            minimum: 1
+          description: Page size
+        - in: query
+          name: sort
+          schema:
+            type: array
+            items:
+              type: string
+          style: form
+          explode: false
+          description: Sorting criteria in the format `property,asc|desc`. Multiple sort parameters are supported.
       responses:
         '200':
           description: A list of warehouses
@@ -104,12 +128,12 @@ components:
         id:
           type: integer
           example: 1
-        name:
+        warehouseName:
           type: string
           example: Warehouse name
-        identifier:
+        warehouseIdentifier:
           type: string
-          example: Warehouse identifier
+          example: Identifier
         created:
           type: string
           format: dateTime
@@ -121,21 +145,21 @@ components:
     CreateWarehouseDto:
       type: object
       properties:
-        name:
+        warehouseName:
           type: string
           example: Warehouse name
-        identifier:
+        warehouseIdentifier:
           type: string
-          example: Warehouse identifier
+          example: Identifier
     UpdateWarehouseDto:
       type: object
       properties:
         id:
           type: integer
           example: 1
-        name:
+        warehouseName:
           type: string
           example: Warehouse name
-        identifier:
+        warehouseIdentifier:
           type: string
-          example: Warehouse identifier
+          example: Identifier
